app/assets/stylesheets/canvas/config/_base.scss
/* -------------------- MAIN -------------------- */

html{
	height: 100%;
}

body{
  overflow-x: hidden;
	font-family: $primary-font;
}

a{
	@include transition($transition);
}

a:link, a:visited{
	color: $primary-color;
}

a:hover, a:focus{
	color: $primary-hover;
	text-decoration: none;
}

a:focus{
  outline: 0;
}

a:active{
	color: $primary-hover;
}

button{
	background: none;
	border: none;
	padding: 0;
	color: $primary-color;
	text-decoration: none;
	&:hover, &:focus{
		color: $primary-hover;
	}
}

.bump-up{
  top: -1px;
}

.bump-up-2{
  top: -2px;
}

.bump-right{
  left: 1px;
}

.bump-down{
  top: 1px;
}

.bump-down-2{
  top: 2px;
}

.bump-left{
  left: -1px;
}

.transitionable{
  transition: 0.2s ease-out;
}

.rotate-45{
  transform: rotate(45deg);
}

.rotate-90{
  transform: rotate(90deg);
}

.rotate-180{
  transform: rotate(180deg);
}


/* -------------------- LAYOUT -------------------- */

.clear:before, .clear:after {
    content: " ";
    display: table;
}

.clear:after {
    clear: both;
}

.list-flex{
  display: flex;
  li{
    flex: 1;
  }
}

.flex{
  display: flex;
}

.align-items-center{
  align-items: center;
}

.block{
  display: block;
}

* {
  background-repeat: no-repeat;
  position: relative;
  vertical-align: middle;
}

*::selection {
	background: $primary-light; /* Safari */
	color: $white;
}

p::-moz-selection {
	background: $primary-light; /* Firefox */
	color: $white;
}

.margin-bottom-xs{
  margin-bottom: $margin-half;
}

.margin-bottom-sm{
  margin-bottom: $margin;
}

.margin-bottom-md{
  margin-bottom: $margin * 1.5;
}

.margin-bottom{
  margin-bottom: $margin-double;
}

.margin-bottom-lg{
  margin-bottom: $margin * 3;
}

.margin-top-xxs{
  margin-top: 10px !important;
}

.margin-top-xs{
  margin-top: $margin-half;
}

.margin-top-sm{
  margin-top: $margin;
}

.margin-top-md{
  margin-top: $margin * 1.5;
}

.margin-top{
  margin-top: $margin-double;
}

.margin-top-lg{
  margin-top: $margin * 3;
}

.flip-wrapper{
  &:hover{
    .flip-front{
      transform: rotateY(180deg);
    }
    .flip-back{
      transform: rotateY(360deg);
    }
  }
  .flip{
    position: absolute;
    backface-visibility: hidden;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transition: 0.5s ease-out;
    &-front{
      z-index: 10;
    }
    &-back{
    -webkit-transform: rotateY(180deg);
    }
  }
}

.no-scroll{
  position: fixed !important;
  width: 100%;
}



/* -------------------- ELEMENTS -------------------- */

.section{
	padding-top: $margin;
	padding-bottom: $margin;
}

.cover{
	color: $white;
	h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
		color: $white;
	}
}

.circle{
  border-radius: 50%;
  width: 30px;
  height: 30px;
  display: block;
  background: $grey-5;
  @include transition($transition);
}

.icon-stack{
  .circle{
    position: absolute;
    top: 0;
  }
  .icon-stack-1x{
    top: -1px;
    left: -6px;
    font-size: 14px;
  }
}

.quote-wrapper{
  padding-left: 15px;
  padding-right: 15px;
}

.note{
  font-style: italic;
  color: $primary-color;
}

.image-link{
  background: $grey-5;
  display: block;
  &:hover img{
    opacity: 0.8;
  }
}

.image-link img{
  @include transition($transition);
}

.grid-img{
  width: 100%;
  max-width: 300px;
  margin: 0 auto;
  padding-bottom: 64%;
  overflow: hidden;
  height: 0;
  display: block;
  color: $black;
}

.badge, .btn .badge{
  min-width: 20px;
  height: 20px;
  padding: 6px 5px 3px;
  font-size: 10px;
  border-radius: 10px;
  background-color: $grey-2;
  color: $grey-6;
  &.floating{
    position: absolute;
    top: -7px;
    right: -7px;
  }
  &-dark{
    background: $grey-6;
    color: $off-white;
  }
  &-red{
    background: $red;
    color: $white;
  }
}

.video-link{
	display: block;
	background: $white;
	&:hover{
		.icon-stack{
			@include scale($scale);
		}
		img{
			opacity: 0.8;
		}
	}
	img{
		@include transition($transition);
		@include transition-fix();
		opacity: 1;
	}
	.icon-stack{
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -21px;
    margin-left: -21px;
    z-index: 10;
    @include transition($transition);
    .icon-circle-thin{
      color: $white;
      font-size: 50px;
    }
    .icon-play{
      top: 4px;
      left: 2px;
    }
  }
}

.video-wrapper{
	padding-bottom: 56.25%;
	height: 0;
	margin-bottom: 60px;
}

.video-wrapper iframe{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.video-16-9{
	padding-bottom: 56.25%;
	height: 0;
	margin-bottom: 60px;
}

.video-16-9 iframe{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.video-ws{
	padding-bottom: 42.18%;
	height: 0;
	margin-bottom: 60px;
}

.video-ws iframe{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.dropdown-menu{
	@include box-shadow($shadow);
	border: 1px solid $grey-1;
	li{
		margin: 0;
		a{
			padding: 5px 15px;
		}
	}
	.divider{
		margin: 5px 0;
	}
}

.pill{
  padding: 5px 15px 5px 18px;
  height: 40px;
  @include border-radius(20px);
  @include transition($transition ease-out);
  color: $black;
  font-size: 18px;
  border: 1px solid $grey-3;
  display: inline-block;
  .icon{
    font-size: 16px;
    line-height: 1;
    margin: 0 2px 0 0;
    left: -5px;
  }
  .icon-last{
    margin: 0 0 0 2px;
    left: 2px;
  }
  .delete{
    font-size: 24px;
    color: #aeaeae;
    left: 2px;
    margin-left: 2px;
    display: inline-block;
    padding-bottom: 3px;
    &:hover{
      color: $primary-hover;
    }
  }
}

a.pill{
  color: $black;
  &:hover{
    background: $grey-6;
    color: $white;
    border-color: $grey-6;
  }
}

.pill-sm{
  height: 30px;
  padding: 0 12px 0 15px;
  font-size: 14px;
  line-height: 26px;
  .icon{
    font-size: 12px;
  }
}

.pill-xs{
  height: 20px;
  padding: 0 8px 0 10px;
  font-size: 12px;
  line-height: 18px;
  .icon{
    font-size: 12px;
  }
}
/* ... */

